--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+body {
+  background: #000000;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
 .bg-img{
     background-image: linear-gradient(to right, rgb(35, 37, 38 , 0.9), rgb(65, 67, 69 , 0.9)),url('./assets/img/house-bg1.jpg');
 }
@@ -193,4 +199,58 @@
    
    
   
+  .card {
+    z-index: 999;
+    position: absolute;
+    /* left: 50%; */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 18rem;
+    background-color: #1e2922;
+    border: 3px solid #58bc82;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 26px;
+    font-weight: 700;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 30px 40px;
+    color: #58bc82;
+    border-radius: 8px;
+  }
   
+  .App-logo {
+    pointer-events: none;
+    width: 120px;
+    margin-bottom: 20px;
+  }
+  
+  .App-button {
+    padding: 10px 20px;
+    background-color: transparent;
+    color: #58bc82;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 15px;
+    border: 3px solid #58bc82;
+    border-radius: 5em;
+    margin-top: 20px;
+    transition: 0.2s;
+  }
+  
+  .App-button:hover {
+    color: #2e2d23;
+    background-color: #58bc82;
+  }
+
+  .backdrop {
+    transition: all 0.3s ease;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to left, rgba(67, 67, 67, 0.8), rgb(0, 0, 0 , 0.8)); 
+    z-index: 99; /* Ensure it's above other content */
+  }
