--- a/src/App.css
+++ b/src/App.css
@@ -254,3 +254,48 @@ body {
     background: linear-gradient(to left, rgba(67, 67, 67, 0.8), rgb(0, 0, 0 , 0.8)); 
     z-index: 99; /* Ensure it's above other content */
   }
+
+
+  .social-icon {
+    position: relative;
+    border: none;
+    margin: 10px;
+    background-color: transparent;
+  }
+  
+  .social-icon a {
+    width: 60px;
+    height: 60px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-right: 1px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    box-shadow: 0 5px 45px rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(2px);
+    transition: 0.5s;
+    overflow: hidden;
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+  
+  .social-icon a:hover {
+    transform: translateY(-20px);
+  }
+  
+  .social-icon a::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50px;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.5);
+    transform: skewX(45deg) translateX(150px);
+    transition: 0.5s ease;
+  }
+  
+  .social-icon a:hover::before {
+    transform: skewX(45deg) translateX(-150px);
+  }
